syntax = "proto3";

package recommend;

import "content.proto";

service RecommendService {
    rpc GetTrackRecommendation (GetTrackRecommendationRequest) returns (GetRecommendationResponse);
    rpc GetGeneralRecommendation (GetGeneralRecommendationRequest) returns (GetRecommendationResponse);
}

message GetTrackRecommendationRequest {
    string user_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetGeneralRecommendationRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message GetRecommendationResponse { // Renamed from GetTrackRecommendationsResponse to be more general
  bool success = 1;
  string message = 2;
  string genres = 3; 
  string artists = 4;
}