syntax = "proto3";

package playlist;

service PlaylistService {
    rpc CreatePlaylist (CreatePlaylistRequest) returns (PlaylistResponse);
    rpc GetPlaylist (GetPlaylistRequest) returns (PlaylistResponse);
    rpc UpdatePlaylist (UpdatePlaylistRequest) returns (PlaylistResponse);
    rpc DeletePlaylist (DeletePlaylistRequest) returns (PlaylistResponse);

    rpc ListUserPlaylists(ListUserPlaylistsRequest) returns (ListUserPlaylistsResponse); 
    rpc AddTrackToPlaylist(AddTrackToPlaylistRequest) returns (PlaylistResponse);
    rpc RemoveTrackFromPlaylist(RemoveTrackFromPlaylistRequest) returns (PlaylistResponse);
    rpc ReorderTracksInPlaylist(ReorderTracksInPlaylistRequest) returns (PlaylistResponse);
}

message Playlist {
    string playlist_id = 9;
    string title = 1;
    string description = 2;
    string user_id = 3;
    repeated string track_ids = 4;
    bool is_public = 5;
    bool is_deleted = 6;
    string created_at = 7; 
    string updated_at = 8;
}

message CreatePlaylistRequest {
    string title = 1;
    string description = 2;
    string user_id = 3;
    bool is_public = 4;
}

message GetPlaylistRequest {
    string playlist_id = 1;
}

message UpdatePlaylistRequest {
    string playlist_id = 1;
    string title = 2;
    string description = 3;
    bool is_public = 5;
}

message DeletePlaylistRequest {
    string playlist_id = 1;
}

message ListUserPlaylistsRequest {
        string user_id = 1;
}

message AddTrackToPlaylistRequest {
    string playlist_id = 1;
    string track_id = 2;
}

message RemoveTrackFromPlaylistRequest {
    string playlist_id = 1;
    string track_id = 2;
}

message ReorderTracksInPlaylistRequest {
    string playlist_id = 1;
    int32 track_old_index = 2;
    int32 track_new_index = 3;
}

message PlaylistResponse {
    string message = 1;
    bool success = 2;
    Playlist playlist = 3;
}

message DeleteResponse {
    string message = 1;
    bool success = 2;
}

message ListUserPlaylistsResponse {
    string message = 1;
    bool success = 2;
    repeated Playlist playlists = 3;
}